--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,6 +10,10 @@
   height: 7rem;
   background-color: #fff;
   border-bottom: var(--color-grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.4rem;
 }
 
 .content{
@@ -19,6 +23,9 @@
 .sidebar{
   background-color: var(--color-grey-dark-1);
   flex:0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view{
