--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -9,7 +9,7 @@
 .header{
   height: 7rem;
   background-color: #fff;
-  border-bottom: var(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -31,5 +31,4 @@
 .hotel-view{
   background-color: #fff;
   flex: 1;
-  background-color: orangered;
 }
