--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -197,7 +197,7 @@ justify-content: center;
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading{
     font-size: 2.25rem;
@@ -259,8 +259,17 @@ justify-content: center;
   cursor: pointer;
   transition: all .2s;
 
+  & span {
+    margin-left: 3px;
+    transition: margin-left .2s;
+  }
+
   &:hover{
     color: var(--color-grey-dark-1);
+
+    & span{
+      margin-left: 8px;
+    }
   }
 
   &:focus{
@@ -284,5 +293,129 @@ justify-content: center;
   100%{
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+////////////////////////////////////
+//PARAGRAPH
+.paragraph:not(:last-of-type){
+  margin-bottom: 2rem;
+}
+
+////////////////////////////////////
+//LIST
+
+.list{
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item{
+    flex: 0 0 50%;
+    margin-bottom: .7rem;
+  }
+  &__item::before{
+    content: '';
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: .7rem;
+    //older browsers
+    // background-image: url(../img/chevron-thin-right.svg);
+    // background-size: cover;
+    //newer browser
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-size: cover;
+  }
+}
+////////////////////////////////////
+//RECOMMEND
+.recommend{
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-3);
+  display: flex;
+  align-items: center;
+
+  &__photo{
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid #fff;
+
+    &:not(:last-child){
+      margin-right: -1.15rem;
+    }
+  }
+
+  &__count{
+    margin-right: auto;
+  }
+  &__friends{}
+}
+
+////////////////////////////////////
+//REVIEWS
+
+.review{
+  background-color: #fff;
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+
+  &__text{
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative;
+  }
+  &__user{
+    display: flex;
+    align-items: center;
+
+  }
+  &__photo{
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+  &__user-box{
+    margin-right: auto;
+  }
+  &__user-name{
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 1.1rem;
+    margin-bottom: .4rem;
+  }
+  &__user-date{
+    font-size: 1rem;
+    color: var(--color-grey-dark-3);
+  }
+  &__rating{
+    font-size: 2.2rem;
+    font-weight: 300;
+    color: var(--color-primary);
+  }
+
+  &::before{
+    content: '\201C';
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    line-height: 1;
+    z-index: 1;
   }
 }
