--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -13,6 +13,12 @@ flex: 0 0 40%;
 display: flex;
 align-items: center;
 justify-content: center;
+
+@media only screen and(max-width:$bp-smallest){
+  order: 1;
+  flex: 0 0 100%;
+  background-color: var(--color-grey-light-2);
+}
   &__input{
     font-family: inherit;
     font-size: inherit;
@@ -118,11 +124,24 @@ justify-content: center;
   font-size: 1.4rem;
   list-style: none;
   margin-top: 3.5rem;
+
+  @media only screen and(max-width:$bp-medium){
+    display: flex;
+    margin: 0;
+  }
   &__item{
     position: relative;
 
     &:not(:last-child){
       margin-bottom: .5rem;
+
+      @media only screen and(max-width:$bp-medium){
+        margin-bottom: 0;
+      }
+    }
+
+    @media only screen and(max-width:$bp-medium){
+      flex: 1;
     }
   }
   &__item::before{
@@ -160,6 +179,16 @@ justify-content: center;
     align-items: center;
     z-index: 10;
     position: relative;
+
+    @media only screen and(max-width:$bp-medium){
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    @media only screen and(max-width:$bp-small){
+      flex-direction: column;
+      padding: 1.5rem .5rem;
+    }
   }
       
   &__icon{
@@ -167,6 +196,13 @@ justify-content: center;
     height: 1.7rem;
     margin-right: 2rem;
     fill: currentColor;
+
+    @media only screen and(max-width:$bp-small){
+      margin-right: 0;
+      margin-bottom: .7rem;
+      width: 1.5rem;
+      height: 1.5rem;
+    }
   }
 
 }
@@ -179,6 +215,10 @@ justify-content: center;
   color: var(--color-grey-light-4);
   text-align: center;
   padding: 2.5rem;
+
+  @media only screen and(max-width:$bp-medium){
+    display: none;
+  }
 }
 
 ////////////////////////////////////
@@ -205,6 +245,11 @@ justify-content: center;
     text-transform: uppercase;
     letter-spacing: 1px;
     padding: 1.5rem 3rem;
+
+    @media only screen and(max-width:$bp-small){
+      font-size: 1.8rem;
+      padding: 1.25rem 2rem;
+    }
   }
   &__stars{
     margin-right: auto;
@@ -234,14 +279,26 @@ justify-content: center;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+
+    @media only screen and(max-width:$bp-small){
+      padding: 0 1.5rem;
+    }
   }
   &__rating-average{
     font-size: 2.25rem;
     font-weight: 300;
+
+    @media only screen and(max-width:$bp-small){
+      font-size: 1.8rem;
+    }
   }
   &__rating-count{
     font-size: .8rem;
     text-transform: uppercase;
+
+    @media only screen and(max-width:$bp-small){
+      font-size: .5rem;
+    }
   }
 }
 
@@ -324,15 +381,20 @@ justify-content: center;
     height: 1rem;
     width: 1rem;
     margin-right: .7rem;
-    //older browsers
-    // background-image: url(../img/chevron-thin-right.svg);
-    // background-size: cover;
-    //newer browser
-    background-color: var(--color-primary);
-    -webkit-mask-image: url(../img/chevron-thin-right.svg);
-    mask-image: url(../img/chevron-thin-right.svg);
-    -webkit-mask-size: cover;
-    mask-size: cover;
+
+    // older browsers
+    background-image: url(../img/chevron-thin-right.svg);
+    background-size: cover;
+    
+    // newer browser
+    @supports (-webkit-mask-image:url()) or (mask-image: url()){
+      background-color: var(--color-primary);
+      -webkit-mask-image: url(../img/chevron-thin-right.svg);
+      mask-image: url(../img/chevron-thin-right.svg);
+      -webkit-mask-size: cover;
+      mask-size: cover;
+      background-image: none;
+    }
   }
 }
 ////////////////////////////////////
@@ -351,14 +413,16 @@ justify-content: center;
     border: 3px solid #fff;
 
     &:not(:last-child){
-      margin-right: -1.15rem;
+      margin-right: -2rem;
     }
   }
 
   &__count{
     margin-right: auto;
   }
-  &__friends{}
+  &__friends{
+    display: flex;
+  }
 }
 
 ////////////////////////////////////
@@ -371,6 +435,12 @@ justify-content: center;
   margin-bottom: 3.5rem;
   position: relative;
   overflow: hidden;
+  
+  @media only screen and(max-width:$bp-medium){
+    padding: 2rem;
+    margin-bottom: 3rem;
+
+  }
 
   &__text{
     margin-bottom: 2rem;
@@ -426,6 +496,10 @@ justify-content: center;
 .cta{
   padding: 3.5rem 0;
   text-align: center;
+
+  @media only screen and(max-width:$bp-medium){
+    padding: 2.5rem 0;
+  }
 
   &__book-now{
     font-size: 2rem;
